--- a/index.html
+++ b/index.html
@@ -6,38 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
-  <title>Meu Site</title>
+  <title>Calendário da Copa 2022</title>
 </head>
-<body>
+<body class="blue">
   <div id="app">
     <header>
       <img src="./assets/logo-nlw.svg" alt="logo da nlw copa" />
       <h1 id="calendar">Calendário</h1>
     </header>
+  
     <main id="cards">
-      
-      <div class="card">
-        <h2>24/11 <span>quinta</span></h2>
-        <ul>
-          <li>
-            <img src="./assets/BRA-flag.svg" alt="bandeira do Brasil" >
-            <strong>07:00</strong>
-            <img src="./assets/CMR-flag.svg" alt="bandeira de Camarões" >
-          </li>
-          <li>
-            <img src="./assets/BRA-flag.svg" alt="bandeira do Brasil" >
-            <strong>07:00</strong>
-            <img src="./assets/CMR-flag.svg" alt="bandeira de Camarões" >
-          </li>
-          <li>
-            <img src="./assets/BRA-flag.svg" alt="bandeira do Brasil" >
-            <strong>07:00</strong>
-            <img src="./assets/CMR-flag.svg" alt="bandeira de Camarões" >
-          </li>
-        </ul>
-      </div>
-
     </main>
+
   </div>
 </body>
 </html>
